--- a/examples/configs/config.yaml
+++ b/examples/configs/config.yaml
@@ -8,7 +8,7 @@ jobs:
   provider: postgres.pg_dump
   spec:
     host: localhost
-    port: '5432'
+    port: 5432
     database: pg
     username: 'Admin'
     password: 'secret'
