added S3Target definition

--- a/examples/configs/test.yaml
+++ b/examples/configs/test.yaml
@@ -8,16 +8,10 @@ jobs:
     database: 'backlokto'
     username: 'backlokto'
     password: 'qwerty'
-#  targets:
-#  - type: "s3"
-#    s3_bucket_name: "my-bucket"
-#    s3_bucket_key: "prod/backups"
-#    region: eu-central-1
-#    access_key: xxxxxxxxxx
-#    secret_key: xxxxxxxxxx
-#  - type: s3
-#    s3_bucket_name: "my-bucket"
-#    s3_bucket_key: "prod/backups"
-#    region: eu-central-1
-#    access_key: xxxxxxxxxx
-#    secret_key: xxxxxxxxxx
+  targets:
+  - type: "s3"
+    s3_bucket_name: "my-bucket"
+    s3_bucket_key: "prod/backups"
+    region: eu-central-1
+    access_key: xxxxxxxxxx
+    secret_key: xxxxxxxxxx
