--- a/examples/configs/test.yaml
+++ b/examples/configs/test.yaml
@@ -13,17 +13,17 @@ jobs:
     s3_bucket_name: "backup-test-kdsj9238j"
     s3_bucket_key: "prod/backups/test/"
     region: us-east-1
-    access_key: AKIAQYBHHNEO5EXNXB7X
-    secret_key: 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
+    access_key: xxxxxxx
+    secret_key: xxxxxxxxxxx
   - type: "s3"
     s3_bucket_name: "backup-test2-kdsj9238j"
     s3_bucket_key: "staging"
     region: us-east-1
-    access_key: AKIAQYBHHNEO5EXNXB7X
-    secret_key: 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
+    access_key: xxxxxxx
+    secret_key: xxxxxxxxxxx
   - type: "s3"
     s3_bucket_name: "backup-test3-kdsj9238j"
     #s3_bucket_key: "prod/backups"
     region: us-east-1
-    access_key: AKIAQYBHHNEO5EXNXB7X
-    secret_key: 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
+    access_key: xxxxxxx
+    secret_key: xxxxxxxxxxx
