--- a/examples/configs/test.yaml
+++ b/examples/configs/test.yaml
@@ -10,20 +10,20 @@ jobs:
     password: 'qwerty'
   targets:
   - type: "s3"
-    s3_bucket_name: "backup-test-kdsj9238j"
+    s3_bucket_name: "backup-test1-kdsj9238j"
     s3_bucket_key: "prod/backups/test/"
     region: us-east-1
-    access_key: xxxxxxx
-    secret_key: xxxxxxxxxxx
+    #access_key: xxxxx
+    #    secret_key: xxxxxxxxxxxx
   - type: "s3"
     s3_bucket_name: "backup-test2-kdsj9238j"
     s3_bucket_key: "staging"
     region: us-east-1
-    access_key: xxxxxxx
-    secret_key: xxxxxxxxxxx
+    #access_key: xxxxx
+    #secret_key: xxxxxxxxxxxx
   - type: "s3"
     s3_bucket_name: "backup-test3-kdsj9238j"
     #s3_bucket_key: "prod/backups"
     region: us-east-1
-    access_key: xxxxxxx
-    secret_key: xxxxxxxxxxx
+    #access_key: xxxxx
+    #secret_key: xxxxxxxxxxxx
