--- a/examples/configs/test.yaml
+++ b/examples/configs/test.yaml
@@ -1,7 +1,9 @@
 ---
 jobs:
-- id: "Test postgres.pg_dump job"
+- id: "Test postgres.pg_dump job [RED]"
   provider: postgres.pg_dump
+  tags:
+    env: red
   spec:
     host: localhost
     port: 5432
@@ -10,20 +12,36 @@ jobs:
     password: 'qwerty'
   targets:
   - type: "s3"
-    s3_bucket_name: "backup-test-kdsj9238j"
+    s3_bucket_name: "backup-test1-kdsj9238j"
     s3_bucket_key: "prod/backups/test/"
     region: us-east-1
-    access_key: xxxxxxx
-    secret_key: xxxxxxxxxxx
+    #access_key: xxxxx
+    #secret_key: xxxxxxxxxxxx
   - type: "s3"
     s3_bucket_name: "backup-test2-kdsj9238j"
     s3_bucket_key: "staging"
     region: us-east-1
-    access_key: xxxxxxx
-    secret_key: xxxxxxxxxxx
+    #access_key: xxxxx
+    #secret_key: xxxxxxxxxxxx
   - type: "s3"
     s3_bucket_name: "backup-test3-kdsj9238j"
-    #s3_bucket_key: "prod/backups"
     region: us-east-1
-    access_key: xxxxxxx
-    secret_key: xxxxxxxxxxx
+    #access_key: xxxxx
+    #secret_key: xxxxxxxxxxxx
+- id: "Test postgres.pg_dump job [BLUE]"
+  provider: postgres.pg_dump
+  tags:
+    env: blue
+    branch: main
+  spec:
+    host: localhost
+    port: 5432
+    database: 'backlokto'
+    username: 'backlokto'
+    password: 'qwerty'
+  targets:
+  - type: "s3"
+    s3_bucket_name: "backup-test3-kdsj9238j"
+    region: us-east-1
+    #access_key: xxxxx
+    #secret_key: xxxxxxxxxxxx
