started rds snapshot provider

--- a/examples/configs/test.yaml
+++ b/examples/configs/test.yaml
@@ -45,3 +45,10 @@ jobs:
     region: us-east-1
     #access_key: xxxxx
     #secret_key: xxxxxxxxxxxx
+- id: "Test RDS snapshot provider"
+  provider: "aws.rds.snapshot"
+  #access_key: xxxxx
+  #secret_key: xxxxxxxxxxxx
+  rds_region: us-east-1
+  rds_identifier: "mysql-rds-db"
+  rds_snapshot_prefix: "mysql-rds-snapshot"
